[package]
name = "apalis-pgmq"
version = "0.1.0"
edition = "2021"
authors = ["Nutcas3 <mauricee423@gmail.com>"]
description = "PGMQ storage backend for Apalis"
license = "MIT"
repository = "https://github.com/apalis-dev/apalis-pgmq"
keywords = ["apalis", "pgmq", "postgres", "message-queue", "background-jobs"]
categories = ["asynchronous", "database"]

[dependencies]
apalis-core = "1.0.0-beta.1"
apalis-sql = "1.0.0-beta.1"
pgmq = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
pin-project = "1"
ulid = "1"
thiserror = "2.0.17"
tracing = "0.1"
async-stream = "0.3"
chrono = "0.4"

[dev-dependencies]
tracing-subscriber = "0.3"

[features]
default = []
