[package]
name = "apalis-pgmq"
version = "0.1.0"
edition = "2024"
authors = ["Nutcas3 <mauricee423@gmail.com>"]
description = "PGMQ storage backend for Apalis"
license = "MIT"
repository = "https://github.com/apalis-dev/apalis-pgmq"
keywords = ["apalis", "pgmq", "postgres", "message-queue", "background-jobs"]
categories = ["asynchronous", "database"]

[dependencies]
apalis-core = "1.0.0-rc.2"
apalis-codec = { version = "0.1.0-rc.2", features = ["json"] }
pgmq = "0.31"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.17"
futures = "0.3"
tower = "0.5"
tracing = "0.1"

[dev-dependencies]
apalis = "1.0.0-rc.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
