[package]
name = "apalis-pgmq"
version = "0.1.0-rc.1"
authors = ["Njuguna Mureithi <mureithinjuguna@gmail.com>"]
edition = "2024"
repository = "https://github.com/apalis-dev/apalis-pgmq"
license-file = "LICENSE"
license = "PostgreSQL"
description = "Background task processing for rust using apalis and pgmq"
readme = "README.md"
homepage = "https://github.com/apalis-dev/apalis-pgmq"
documentation = "https://docs.rs/apalis-pgmq"
keywords = ["apalis", "postgres", "messages", "queue", "worker"]
categories = ["asynchronous", "database", "network-programming"]

[features]
default = ["tokio-comp"]
async-std-comp = ["async-std", "sqlx/runtime-async-std-rustls"]
async-std-comp-native-tls = ["async-std", "sqlx/runtime-async-std-native-tls"]
tokio-comp = ["tokio", "sqlx/runtime-tokio-rustls"]
tokio-comp-native-tls = ["tokio", "sqlx/runtime-tokio-native-tls"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["postgres", "chrono", "json"] }
apalis-core = { version = "1.0.0-rc.4", default-features = false, features = [
    "sleep",
] }
apalis-codec = { version = "0.1.0-rc.4", default-features = false, features = [
    "json",
] }

thiserror = "2.0.18"
url = "2.5.8"
tracing = "0.1.44"
futures = "0.3.31"
serde = "1.0.228"
serde_json = "1.0.149"
pin-project-lite = "0.2.16"
tokio = { version = "1", features = [
    "rt",
    "net",
], optional = true, default-features = false }
async-std = { version = "1.13.0", optional = true, default-features = false }

[dev-dependencies]
pgmq = "0.32.0"
tokio = { version = "1", features = ["full"] }
apalis = { version = "1.0.0-rc.4" }
apalis-workflow = { version = "0.1.0-rc.4", features = ["rand"]}

[package.metadata.cargo-udeps.ignore]
development = [
    'pgmq',
] # This dep is not used but only included to allow tracking upstream releases with dependabot
